--- a/arability/app/views/api/index.html.erb
+++ b/arability/app/views/api/index.html.erb
@@ -3,13 +3,23 @@ To find out how you can see out <a href="<%= api_help_path %>">help pages</a></p
 <fieldset>
   <legend>Generate an api key</legend>
 
-  <%= form_for @api_key, :url => { :action => "create" },
-    :html => {:class => "form-horizontal"} do |f| %>
+  <% if @api_key.errors.present? %>
+    <div class="alert alert-error">
+      <ul class="unstyled">
+        <% @api_key.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <%= form_for @api_key, url: { action: "create" },
+    html: {:class => "form-horizontal"}, method: :post do |f| %>
 
     <div class="control-group">
       <label class="control-label" for="website">Website:</label>
       <div class="controls">
-        <input type="text" name="website" id="website" placeholder="www.example.com"/>
+        <%= f.text_field :website, id: "website", placeholder: "www.example.com" %>
         <small>(the website you will use our api on)</small>
       </div>
     </div>
@@ -17,7 +27,7 @@ To find out how you can see out <a href="<%= api_help_path %>">help pages</a></p
     <div class="control-group">
       <label class="control-label" for="website">Project:</label>
       <div class="controls">
-        <%= f.collection_select :project_id, @projects, :id, :name, prompt: true %>
+        <%= f.collection_select :project_id, @projects, :id, :name, include_blank: true %>
         <small>(optional project to tie to this api key)</small>
       </div>
     </div>
@@ -30,8 +40,75 @@ To find out how you can see out <a href="<%= api_help_path %>">help pages</a></p
   <% end %>
 </fieldset>
 
-<% if @api_keys %>
-  <h4>Your Api keys:</h4>
+<h4>Using your API Key</h4>
+<div>
+
+</div>
+
+<% if @api_keys.present? %>
+  <h4 id="api-list-text">Your Api keys:</h4>
+  <% @api_keys.each do |api_key| %>
+    <div class="well span5 api-entry" id="api-entry-<%= api_key.id %>" style="">
+        <button class="btn btn-danger pull-right delete-btn"
+          style="margin-top:20px; display:none;"
+            onclick="show_delete_modal(<%= api_key.id %>)">Delete</button>
+      <span style="padding-left: -30px;">
+        <dl class="dl-horizontal">
+          <dt>API key:</dt> <dd><%= api_key.token %></dd>
+          <dt>Website:</dt> <dd><%= api_key.website %></dd>
+          <dt>Project:</dt>
+          <% if api_key.project.present? %>
+          <dd><%= link_to api_key.project.name, project_path(api_key.project) %></dd>
+          <% else %>
+          <dd><%= "--" %></dd>
+          <% end %>
+        </dl>
+      <span>
+    </div>
+  <% end %>
 <% end %>
 
+<div class="modal hide fade" id="delete-modal">
+  <div class="modal-header">
+    <button type="button" class="close"
+      data-dismiss="modal" aria-hidden="true">&times;</button>
+    <h3>Confirm Deletion</h3>
+  </div>
+  <div class="modal-body">
+    <p>Are you sure you want to delete this API key</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">Close</a>
+    <a href="#" class="btn btn-primary" id="delete-api-btn"
+      data-dismiss="modal" aria-hidden="true">Delete</a>
+  </div>
+</div>
 
+<script>
+  $(document).ready(function() {
+    $(".api-entry").hover(function() {
+      $(this).find(".delete-btn").show();
+    }, function() {
+      $(this).find(".delete-btn").hide();
+    })
+  });
+
+  function delete_api_entry(api_id) {
+    $.get("<%= api_key_delete_path %>", {
+      "api_key_id" : api_id
+    }, function() {
+      $("#api-entry-"+api_id).remove();
+      if($(".api-entry").length == 0) {
+        $("#api-list-text").remove();
+      }
+    });
+  }
+
+  function show_delete_modal(api_id) {
+    $("#delete-api-btn").click(function() {
+      delete_api_entry(api_id)
+    });
+    $("#delete-modal").modal("show");
+  }
+  <%= render "script.js" %>
+</script>
