--- a/arability/app/views/search/_synonym_results.html.erb
+++ b/arability/app/views/search/_synonym_results.html.erb
@@ -142,6 +142,10 @@
     </div>
   <% end %>
 
+  <div class="alert alert-error" id="age_error" style="display:none;">
+    <div style="text-align:center;"><%= t(:wrong_age_input) %></div>
+  </div>
+
   <script type="text/javascript">
     <%= render "submit-report.js" %>
   </script>
