--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -39,6 +39,10 @@
   
   
 }
+.vote_form1{
+  position:relative;
+}
+
 .vote_form {
   float: right;
   margin-right: 20px;
@@ -48,7 +52,7 @@
   height:50px;
 }
 
-#synonym_button{
+#synonym_button1{
   height:50px;
   width:150px;
   font-size:30px;
@@ -61,6 +65,17 @@
   border-top-right-radius:4px;
   border-bottom-right-radius:4px;
   margin-right:150px;
+}
+
+#synonym_button{
+  height:50px;
+  width:200;
+  font-size:30px;
+  padding:20px;
+  padding-bottom:40px;
+  margin:20px;
+  text-align: center;
+  border-radius:7px;
 }
 
 #synonym_buttons_row{
@@ -101,6 +116,10 @@
   border-top-left-radius:6px;
   border-bottom-right-radius:6px;
   border-bottom-left-radius:6px;
+}
+.vote_table{
+  width:700px;
+  margin-right: 20px;
 }
 
 .table1 .btn{
@@ -423,6 +442,7 @@ margin-left: 80px;
 .text_english{
   color: white;
   font-size: 30px;
+  text-align:center;
 }
 
 .text_arabic{
