--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -1,7 +1,6 @@
 var words=get_words();
 var translation="";
 
-
 function record_vote(syn_id){
 	$.post("/games/record_vote", {synonym_id: syn_id } );
 }
@@ -55,61 +54,4 @@ function suggest_synonym_to_word(keyword_id){
 	$.post("/games/record_synonym" ,{synonym_name: translation, 
 		keyword_id: keyword_id});
 }
-
-vote_form=[];
-vote_form.push('<div style="position:relative; left: 10px;" >');
-vote_form.push('<% submitted_word = @word %>');
-vote_form.push('<% keyword = @keyword%>');
-vote_form.push('<% syn_list = @synonym_list %>');
-vote_form.push('<% if syn_list.size > 0 %>');
-vote_form.push('<% if I18n.locale == :ar %>');
-vote_form.push('<p id="text" class="text_arabic" > من فضلك اختر معني لكلمة:</p></br><p style="font-weight:bold; text-align:center;" >"<%= submitted_word %>"</p>');
-vote_form.push('<% end %>');
-vote_form.push('<% if I18n.locale == :en %>');
-vote_form.push('<p id="text" class="text_english" > please choose a synonym for the word:</p></br><p style="font-weight:bold; text-align:center;" >"<%= submitted_word %>"</p>');
-vote_form.push('<% end %>');
-vote_form.push('<% end %>');
-vote_form.push('<% if syn_list.size == 0 %>');
-vote_form.push('<% if I18n.locale == :ar %>');
-vote_form.push('<p id="text" class="text_arabic" > من فضلك ادخل معني مناسب لكلمة:</p></br><p style="font-weight:bold; text-align:center;">"<%= submitted_word %>"</p>');
-vote_form.push('<% else %>');
-vote_form.push('<p id="text" class="text_english" > please enter a synonym for the word:</p></br><p style="font-weight:bold; text-align:center;" >"<%= submitted_word %>"</p>');
-vote_form.push('<% end %>');
-vote_form.push('<% end %>');
-vote_form.push('<div class="btn-toolbar" id="synonym_buttons">');
-vote_form.push('<% i=1 %>');
-vote_form.push('<%syn_list.each do |syn|%>');
-vote_form.push('<% if i%2==1 %><div class="btn-group" id="synonym_buttons_row"><% end%>');
-vote_form.push('<% if syn.approved %>');
-vote_form.push('<button class="btn btn-success" id="synonym_button" type="submit" onclick="record_vote(<%= syn.id %>)"><%= syn.name %></button>');
-vote_form.push('<% end %>');
-vote_form.push('<% if syn.approved %>');
-vote_form.push('<% if i%2==0 %></div></br><% end %>');
-vote_form.push('<% i=i+1 %>');
-vote_form.push('<% end %>');
-vote_form.push('<% end %>');
-vote_form.push('<% if I18n.locale == :ar %>');
-vote_form.push('</br><div id="box_buttons">');
-vote_form.push('</br><input type="text" id="suggest_synonym_textbox_arabic" placeholder="ادخل معني" >');
-vote_form.push('<button class="btn btn-primary" type="submit" id="suggest_synonym_button_arabic"  onclick="suggest_synonym_to_word(<% if keyword %><%= keyword.id %><% end %>);" >سجل هذا المعني</button>');
-vote_form.push('</div>');
-vote_form.push('<% else %>');
-vote_form.push('</br><div id="box_buttons">');
-vote_form.push('</br><input type="text" id="suggest_synonym_textbox" placeholder="enter a synonym" >');
-vote_form.push('<button class="btn btn-primary" type="submit" id="suggest_synonym_button_english"  onclick="suggest_synonym_to_word(<% if keyword %><%= keyword.id %><% end %>);" >save new synonym</button>');
-vote_form.push('</div>');
-vote_form.push('<% end %>');
-vote_form.push('</div></br>');
-vote_form.push('<div style="float:left;" id="skip_button">');
-vote_form.push('<% if I18n.locale == :ar %>');
-vote_form.push('<button class="btn btn-primary" id="skip_button" type="submit" onclick="skip_keyword()" style="margin-right: 500px;">  تخطي هذه الكلمة >></button>');
-vote_form.push('<% else %>');
-vote_form.push('<button class="btn btn-primary" id="skip_button" type="submit" onclick="skip_keyword()" style="margin-left: 430px;">  skip this word>></button>');
-vote_form.push('<% end %>');
-vote_form.push('</div>');
-vote_form.push('</div>');
-
-
-vote_form=vote_form.join('');
-
-$('.vote_form').append(vote_form);
+$(".vote_form").append("<%= escape_javascript(render 'vote') %>");
