[issue #176 #170 #169] [WIP] finalizing the view of the vote form

--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -69,11 +69,11 @@
 
 #synonym_button{
   height:50px;
-  width:200;
+  width:200px;
   font-size:30px;
   padding:20px;
   padding-bottom:40px;
-  margin:20px;
+  margin-bottom: 20px;
   text-align: center;
   border-radius:7px;
 }
@@ -88,10 +88,9 @@
 }
 
 #skip_button{
-  float:left;
   font-size:20px;
   border-radius: 10px;
-  width:170px;
+  width:190px;
 }
 
 #suggest_synonym_textbox{
