--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -22,7 +22,7 @@ function skip_keyword(){
 
 function update_errors(record_output){
 	$('.alert').remove();
-	$('#box_buttons').append('<div class="alert"></div>');
+	$('#vote_error_messages').append('<div class="alert"></div>');
 	if(record_output == 1) {
 		<% if I18n.locale ==:en %>
 			$('.alert').append('<p style="font-size:20px; ">you cannot insert a blank synonym</p>');
@@ -48,10 +48,10 @@ function update_errors(record_output){
 
 
 function suggest_synonym_to_word(keyword_id){
-	translation = document.getElementById('<% if I18n.locale == :en %>' + 
-		'suggest_synonym_textbox<% else %>' + 
-		'suggest_synonym_textbox_arabic<% end %>').value;
+	translation = document.getElementById('suggest_synonym_textbox').value;
 	$.post("/games/record_synonym" ,{synonym_name: translation, 
 		keyword_id: keyword_id});
 }
+$(".zone").empty();
+$(".zone").append("<div class='vote_form'></div>")
 $(".vote_form").append("<%= escape_javascript(render 'vote') %>");
