[issue #176 #170 #169] adds id to the select of formality

--- a/arability/app/views/games/_vote.html.erb
+++ b/arability/app/views/games/_vote.html.erb
@@ -50,9 +50,9 @@
 				<input type="text" id="suggest_synonym_textbox" placeholder="<%= t(:enter_a_synonym)%>" >
 			</td>
 			<td style="text-align:center; width:230px;">
-				<select style="width:120px;">
-					<option><%= t(:formal) %></option>
-					<option><%= t(:slang) %></option>
+				<select style="width:120px;" id="select_formality">
+					<option value="formal"><%= t(:formal) %></option>
+					<option value="slang"><%= t(:slang) %></option>
 				</select>
 			</td>
 			<td style="text-align:center; width:230px;">
