--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -125,7 +125,7 @@
       <h3 id="modal_label"><%= t(:delete_share) %></h3>
       </div>
       <div class="modal-body">
-        <h6><%= t(:confirm_share)%></h6>
+        <span><%= t(:confirm_share)%></span>
       </div>
       <div class="modal-footer">
         <button class="btn" data-dismiss="modal" style="font-size: 17px;"><%= t(:close_share) %></button>
@@ -165,7 +165,7 @@
       <h3 id="modal_label"><%= t(:delete_share) %></h3>
       </div>
       <div class="modal-body">
-        <h6><%= t(:confirm_share)%></h6>
+        <span><%= t(:confirm_share)%></span>
       </div>
       <div class="modal-footer">
         <button class="btn" data-dismiss="modal" style="font-size: 17px;"><%= t(:close_share) %></button>
