--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -42,3 +42,8 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  <% if I18n.locale == :ar %>
+    $(".btn .btn-primary").attr("style", "clear: left; width: 100%; height: 32px; font-size: 13px;");
+  <% end %>
+</script>
